Use /etc/cron.d/ drop-in file for cron isolation
- Switch from user crontab to /etc/cron.d/allium drop-in
- Add allium-cron-check.sh to verify cron status
- Update README with new cron setup instructions
- Prevents accidental cron overwrites from other tools

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ config.env
 
 # Generated from template by deploy script
 wrangler.toml
+allium.cron
 
 # Keep public/ dir but ignore contents (except .gitkeep)
 public/*
